src/test/ui/parser/wrong-escape-of-curly-braces.stderr
error: unknown character escape: {
  --> $DIR/wrong-escape-of-curly-braces.rs:5:17
   |
LL |     let bad = "/{it is wrong/}";
   |                 ^
   |
help: if used in a formatting string, curly braces are escaped with `{{` and `}}`
  --> $DIR/wrong-escape-of-curly-braces.rs:5:17
   |
LL |     let bad = "/{it is wrong/}";
   |                 ^

error: unknown character escape: }
  --> $DIR/wrong-escape-of-curly-braces.rs:5:30
   |
LL |     let bad = "/{it is wrong/}";
   |                              ^
   |
help: if used in a formatting string, curly braces are escaped with `{{` and `}}`
  --> $DIR/wrong-escape-of-curly-braces.rs:5:30
   |
LL |     let bad = "/{it is wrong/}";
   |                              ^

error: aborting due to 2 previous errors

